# CHATBOT-FACTORY

./: README.md
backend/: auth.py  main.py  pyproject.toml  requirement.txt
backend/core/: config.py
backend/models/: chatbot.py  conversation.py  document.py  employe.py  knowledge_chunk.py
backend/routes/: base_connaissance.py  chat.py  chatbot.py  conversation.py  dashboard.py  document.py  employe.py  faq.py
backend/schemas/: document.py  faq.py
backend/services/: chat_service.py  chunking_service.py  document_service.py  embedding_service.py  faq_service.py  file_service.py  generation_service.py  rag_service.py
backend/uploads/: BeautyStore VS Coquette.pptx  Module  MANAGEMENT ET ENTREPREUNARIAT (START-UP).pptx  njkjnk.txt
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: layout.tsx  page.tsx
frontend/app/admin/entreprise/: page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/chatbots/: page.tsx
frontend/app/dashboard/chatbots/[chatbotId]/base-de-connaissance/: page.tsx
frontend/app/dashboard/chatbots/[chatbotId]/test/: page.tsx
frontend/app/dashboard/chatbots/create/: page.tsx
frontend/app/dashboard/employes/: page.tsx
frontend/app/dashboard/settings/: page.tsx
frontend/app/dashboard/stats/: page.tsx
frontend/app/employe/: layout.tsx  page.tsx
frontend/app/employe/chatbots/: page.tsx
frontend/app/employe/chatbots/[chatbotId]/base-de-connaissance/: page.tsx
frontend/app/employe/chatbots/create/: page.tsx
frontend/app/login/: page.tsx
frontend/app/register/: page.tsx
(+2 files in other folders)
