[project]
name = "chatbot-factory-backend"
version = "0.1.0"
description = "Backend FastAPI pour ChatBot Factory avec RAG, Supabase et authentification"
authors = [
    { name = "Safa Mathlouthi", email = "safa@example.com" }
]

requires-python = ">=3.10"

dependencies = [
    # ── Framework principal ──
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",

    # ── Validation & config ──
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "python-dotenv==1.0.1",

    # ── Base de données (Supabase) ──
    "supabase==2.4.2",
    "httpx==0.27.0",

    # ── Authentification ──
    "PyJWT==2.8.0",
    "bcrypt==4.1.3",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.9",

    # ── IA / RAG ──
    "sentence-transformers==2.7.0",
    "torch==2.3.0",
    "transformers==4.41.0",
    "tokenizers==0.19.1",
    "huggingface-hub==0.23.0",
    "numpy==1.26.4",
    "scikit-learn==1.4.2",

    # ── Documents ──
    "PyPDF2==3.0.1",
    "python-pptx==0.6.23",

    # ── ASGI ──
    "starlette==0.37.2",
    "anyio==4.3.0",

    # ── Base de données ORM (optionnel si utilisé) ──
    "sqlalchemy==2.0.30",

    # ── Tests ──
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"